// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useGetFiles() should call refreshData() when new files and folders has successfully been uploaded 1`] = `
Object {
  "data": Object {
    "existingFiles": Array [
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-11-01T21:09:05.237Z",
        "mimeType": "inode/directory",
        "name": ".rclone",
        "path": ".rclone",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T01:51:05.982Z",
        "mimeType": "inode/directory",
        "name": "Documents",
        "path": "Documents",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T05:14:59.237Z",
        "mimeType": "inode/directory",
        "name": "Games",
        "path": "Games",
        "remote": "gdrive",
        "size": -9,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-29T07:10:05.059Z",
        "mimeType": "inode/directory",
        "name": "Literature",
        "path": "Literature",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:39:11.850Z",
        "mimeType": "inode/directory",
        "name": "Pictures",
        "path": "Pictures",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:45:02.471Z",
        "mimeType": "inode/directory",
        "name": "Software",
        "path": "Software",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T04:22:24.997Z",
        "mimeType": "inode/directory",
        "name": "Videos",
        "path": "Videos",
        "remote": "gdrive",
        "size": -8,
      },
      Object {
        "folderPath": "",
        "isDirectory": false,
        "isImage": false,
        "lastUpdatedTime": "2021-11-14T18:58:44.655Z",
        "mimeType": "application/x-sh",
        "name": "backup.sh",
        "path": "backup.sh",
        "remote": "gdrive",
        "size": 1110,
      },
    ],
    "uploadingFiles": Array [
      Object {
        "folderPath": "",
        "isDirectory": false,
        "mimeType": undefined,
        "name": "backup-locally.sh",
        "path": "backup-locally.sh",
        "remote": "gdrive",
        "size": undefined,
        "uploadStatus": BehaviorSubject {
          "_value": "Success",
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [],
          "thrownError": null,
        },
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "name": "Apps",
        "path": "Apps",
        "remote": "gdrive",
        "uploadStatus": BehaviorSubject {
          "_value": "Success",
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [],
          "thrownError": null,
        },
      },
    ],
  },
  "error": undefined,
  "refetchData": [MockFunction] {
    "calls": Array [
      Array [],
      Array [],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "status": "success",
}
`;

exports[`useGetFiles() should not return uploading files whose uploading file statuses are not uploading and are not in the current dir path / remote 1`] = `
Object {
  "data": Object {
    "existingFiles": Array [],
    "uploadingFiles": Array [],
  },
  "error": undefined,
  "refetchData": [MockFunction],
  "status": "success",
}
`;

exports[`useGetFiles() should return correct object given data fetching is successful and an existing file is being overwritten 1`] = `
Object {
  "data": Object {
    "existingFiles": Array [
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-11-01T21:09:05.237Z",
        "mimeType": "inode/directory",
        "name": ".rclone",
        "path": ".rclone",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T01:51:05.982Z",
        "mimeType": "inode/directory",
        "name": "Documents",
        "path": "Documents",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T05:14:59.237Z",
        "mimeType": "inode/directory",
        "name": "Games",
        "path": "Games",
        "remote": "gdrive",
        "size": -9,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-29T07:10:05.059Z",
        "mimeType": "inode/directory",
        "name": "Literature",
        "path": "Literature",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:39:11.850Z",
        "mimeType": "inode/directory",
        "name": "Pictures",
        "path": "Pictures",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:45:02.471Z",
        "mimeType": "inode/directory",
        "name": "Software",
        "path": "Software",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T04:22:24.997Z",
        "mimeType": "inode/directory",
        "name": "Videos",
        "path": "Videos",
        "remote": "gdrive",
        "size": -8,
      },
      Object {
        "folderPath": "",
        "isDirectory": false,
        "isImage": false,
        "lastUpdatedTime": "2021-11-14T18:58:44.655Z",
        "mimeType": "application/x-sh",
        "name": "backup.sh",
        "path": "backup.sh",
        "remote": "gdrive",
        "size": 1110,
      },
    ],
    "uploadingFiles": Array [],
  },
  "error": undefined,
  "refetchData": [MockFunction],
  "status": "success",
}
`;

exports[`useGetFiles() should return correct object given data fetching is successful and there are is a new folder being uploaded in the same dir path 1`] = `
Object {
  "data": Object {
    "existingFiles": Array [
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-11-01T21:09:05.237Z",
        "mimeType": "inode/directory",
        "name": ".rclone",
        "path": ".rclone",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T01:51:05.982Z",
        "mimeType": "inode/directory",
        "name": "Documents",
        "path": "Documents",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T05:14:59.237Z",
        "mimeType": "inode/directory",
        "name": "Games",
        "path": "Games",
        "remote": "gdrive",
        "size": -9,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-29T07:10:05.059Z",
        "mimeType": "inode/directory",
        "name": "Literature",
        "path": "Literature",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:39:11.850Z",
        "mimeType": "inode/directory",
        "name": "Pictures",
        "path": "Pictures",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:45:02.471Z",
        "mimeType": "inode/directory",
        "name": "Software",
        "path": "Software",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T04:22:24.997Z",
        "mimeType": "inode/directory",
        "name": "Videos",
        "path": "Videos",
        "remote": "gdrive",
        "size": -8,
      },
      Object {
        "folderPath": "",
        "isDirectory": false,
        "isImage": false,
        "lastUpdatedTime": "2021-11-14T18:58:44.655Z",
        "mimeType": "application/x-sh",
        "name": "backup.sh",
        "path": "backup.sh",
        "remote": "gdrive",
        "size": 1110,
      },
    ],
    "uploadingFiles": Array [
      Object {
        "folderPath": "",
        "isDirectory": true,
        "name": "Apps",
        "path": "Apps",
        "remote": "gdrive",
        "uploadStatus": BehaviorSubject {
          "_value": "Uploading",
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [],
          "thrownError": null,
        },
      },
    ],
  },
  "error": undefined,
  "refetchData": [MockFunction],
  "status": "success",
}
`;

exports[`useGetFiles() should return correct object given data fetching is successful and there are new files uploading under an existing folder 1`] = `
Object {
  "data": Object {
    "existingFiles": Array [
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-11-01T21:09:05.237Z",
        "mimeType": "inode/directory",
        "name": ".rclone",
        "path": ".rclone",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T01:51:05.982Z",
        "mimeType": "inode/directory",
        "name": "Documents",
        "path": "Documents",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T05:14:59.237Z",
        "mimeType": "inode/directory",
        "name": "Games",
        "path": "Games",
        "remote": "gdrive",
        "size": -9,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-29T07:10:05.059Z",
        "mimeType": "inode/directory",
        "name": "Literature",
        "path": "Literature",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:39:11.850Z",
        "mimeType": "inode/directory",
        "name": "Pictures",
        "path": "Pictures",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:45:02.471Z",
        "mimeType": "inode/directory",
        "name": "Software",
        "path": "Software",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T04:22:24.997Z",
        "mimeType": "inode/directory",
        "name": "Videos",
        "path": "Videos",
        "remote": "gdrive",
        "size": -8,
      },
      Object {
        "folderPath": "",
        "isDirectory": false,
        "isImage": false,
        "lastUpdatedTime": "2021-11-14T18:58:44.655Z",
        "mimeType": "application/x-sh",
        "name": "backup.sh",
        "path": "backup.sh",
        "remote": "gdrive",
        "size": 1110,
      },
    ],
    "uploadingFiles": Array [],
  },
  "error": undefined,
  "refetchData": [MockFunction],
  "status": "success",
}
`;

exports[`useGetFiles() should return correct object given data fetching is successful and there are new files uploading under the same dir path 1`] = `
Object {
  "data": Object {
    "existingFiles": Array [
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-11-01T21:09:05.237Z",
        "mimeType": "inode/directory",
        "name": ".rclone",
        "path": ".rclone",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T01:51:05.982Z",
        "mimeType": "inode/directory",
        "name": "Documents",
        "path": "Documents",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T05:14:59.237Z",
        "mimeType": "inode/directory",
        "name": "Games",
        "path": "Games",
        "remote": "gdrive",
        "size": -9,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-29T07:10:05.059Z",
        "mimeType": "inode/directory",
        "name": "Literature",
        "path": "Literature",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:39:11.850Z",
        "mimeType": "inode/directory",
        "name": "Pictures",
        "path": "Pictures",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:45:02.471Z",
        "mimeType": "inode/directory",
        "name": "Software",
        "path": "Software",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T04:22:24.997Z",
        "mimeType": "inode/directory",
        "name": "Videos",
        "path": "Videos",
        "remote": "gdrive",
        "size": -8,
      },
      Object {
        "folderPath": "",
        "isDirectory": false,
        "isImage": false,
        "lastUpdatedTime": "2021-11-14T18:58:44.655Z",
        "mimeType": "application/x-sh",
        "name": "backup.sh",
        "path": "backup.sh",
        "remote": "gdrive",
        "size": 1110,
      },
    ],
    "uploadingFiles": Array [
      Object {
        "folderPath": "",
        "isDirectory": false,
        "mimeType": undefined,
        "name": "backup-locally.sh",
        "path": "backup-locally.sh",
        "remote": "gdrive",
        "size": undefined,
        "uploadStatus": BehaviorSubject {
          "_value": "Uploading",
          "closed": false,
          "hasError": false,
          "isStopped": false,
          "observers": Array [],
          "thrownError": null,
        },
      },
    ],
  },
  "error": undefined,
  "refetchData": [MockFunction],
  "status": "success",
}
`;

exports[`useGetFiles() should return correct object given data fetching is successful and there are no uploading files 1`] = `
Object {
  "data": Object {
    "existingFiles": Array [
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-11-01T21:09:05.237Z",
        "mimeType": "inode/directory",
        "name": ".rclone",
        "path": ".rclone",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T01:51:05.982Z",
        "mimeType": "inode/directory",
        "name": "Documents",
        "path": "Documents",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T05:14:59.237Z",
        "mimeType": "inode/directory",
        "name": "Games",
        "path": "Games",
        "remote": "gdrive",
        "size": -9,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-29T07:10:05.059Z",
        "mimeType": "inode/directory",
        "name": "Literature",
        "path": "Literature",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:39:11.850Z",
        "mimeType": "inode/directory",
        "name": "Pictures",
        "path": "Pictures",
        "remote": "gdrive",
        "size": -10,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T03:45:02.471Z",
        "mimeType": "inode/directory",
        "name": "Software",
        "path": "Software",
        "remote": "gdrive",
        "size": -2,
      },
      Object {
        "folderPath": "",
        "isDirectory": true,
        "isImage": false,
        "lastUpdatedTime": "2021-09-28T04:22:24.997Z",
        "mimeType": "inode/directory",
        "name": "Videos",
        "path": "Videos",
        "remote": "gdrive",
        "size": -8,
      },
      Object {
        "folderPath": "",
        "isDirectory": false,
        "isImage": false,
        "lastUpdatedTime": "2021-11-14T18:58:44.655Z",
        "mimeType": "application/x-sh",
        "name": "backup.sh",
        "path": "backup.sh",
        "remote": "gdrive",
        "size": 1110,
      },
    ],
    "uploadingFiles": Array [],
  },
  "error": undefined,
  "refetchData": [MockFunction],
  "status": "success",
}
`;
